[package]
name = "route-publisher"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "UNLICENSED"

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
futures-util = "0.3"
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
url = "2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
